<resources>
    <string name="app_name">積読くずし</string>
    <string name="title_recommend">おすすめ</string>
    <string name="title_tsundoku">積読</string>
    <string name="title_dokuryo">読了</string>
    <string name="title_get_book_info">書籍情報取得</string>
    <string name="get_book_info_text">ISBNコードを入力して下さい</string>
    <string name="title_tsundoku_book_detail">積読進捗</string>
    <string name="register_tsundoku">積読登録する</string>
    <string name="book_title">書籍名:</string>
    <string name="book_author">著者名:</string>
    <string name="book_pages">ページ数:</string>
    <string name="image_description">BookImage</string>
    <string name="slash">/</string>
    <string name="total_pages">total pages:</string>
    <string name="empty_dokuryo">まだ読了した本がありません</string>
    <string name="empty_tsundoku">積読がありません！</string>
</resources>