<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

<data>

</data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Title"
            android:textColor="@color/black"
            android:text="@string/get_book_info_text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChildTitle"
            android:textColor="@color/black"
            android:background="@drawable/round_shape_text"
            android:inputType="number"
            android:ems="13"
            android:maxLines="1"
            android:maxLength="13"
            android:digits="0123456789"
            android:hint="9784873115658"
            />


        <ImageView
            android:id="@+id/imageView"
            android:src="@drawable/sample"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="120dp"
            android:layout_height="180dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/book_title"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/title_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                android:text="書籍タイトル"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:text="@string/book_author"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/author_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:text="著者名"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/author"
                android:text="@string/book_pages"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/pages_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/author"
                android:text="555"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            style="@style/RegisterButton"
            android:enabled="false"
            android:text="@string/register_tsundoku" />

    </LinearLayout>


</layout>